Refactor UserService methods to Command methods